# DiffAttack_v1

./: .gitignore  AGENTS.md  LOSS_OPTIMIZATION.md  METHOD_IMPROVEMENTS.md  README.md  attentionControl.py  diff_latent_attack-0.9.0.py  diff_latent_attack.py  diff_latent_attack_p2p.py  main.py  p2p_utils_rewrite.py  ptp_utils.py  pyproject.toml  real_pipeline.ipynb  seq_aligner.py
