[project]
name = "diffattack-v1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "accelerate>=1.0.1",
    "adversarial-robustness-toolbox==1.13.1",
    "diffusers==0.30.3",
    "eagerpy==0.30.0",
    "ipywidgets>=8.1.8",
    "natsort==8.2.0",
    "numpy==1.21.2",
    "opencv-python==4.5.4.58",
    "pillow==9.2.0",
    "pretrainedmodels==0.7.4",
    "scipy==1.7.1",
    "timm==0.4.12",
    "torch==1.12.0",
    "torchvision==0.13.0",
    "tqdm==4.62.2",
    "transformers>=4.46.3",
]
